--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pytest
 opencv-python
 scipy
 sklearn
-tensorflow==1.7
+tensorflow==https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.7.0-py3-none-any.whl 
 typing
 wheel
 numpy==1.16.2
