--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "test:ts": "tape -r ts-node/register \"src/**/*.spec.ts\" \"tests/**/*.spec.ts\"",
     "test:py": ". python3/bin/activate && PYTHONPATH='src/:python3/facenet/src/' pytest src/ tests/",
     "test:pack": "bash -x scripts/npm-pack-testing.sh",
-    "venv": "python3 -m venv python3 && . python3/bin/activate && pip3 install -r requirements.txt && pip3 install --upgrade numpy >/dev/stdout"
+    "venv": "python3 -m venv python3 && . python3/bin/activate && pip3 install --upgrade https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.7.0-py3-none-any.whl && pip3 install -r requirements.txt && pip3 install --upgrade numpy >/dev/stdout"
   },
   "repository": {
     "type": "git",
